New style, new content, many fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
       {{ content }}
     </div>
 
+    <footer class="container mt-5">
+      <p class="post-footnote">{{ page.footnote }}</p>
+    </footer>
+
     <!-- Footer -->
     {%- include footer.html %}
 
