--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -252,7 +252,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 3.25rem;  // Scales the icon size
     a {
       i::before {
         color: var(--global-text-color);
